# pricing

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  cacert.pem  pyproject.toml
backend/app/: auth.py  config.py  crud.py  main.py  models.py  schemas.py
backend/app/routers/: prices_ws.py  stocks.py  watchlist.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  PriceCard.tsx  SymbolSearch.tsx
frontend/src/hooks/: usePriceFeed.ts
keycloak/: realm-export.json
