[project]
name = "pricing-backend"
version = "0.1.0"
description = "Stock pricing application backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "PyJWT[crypto]>=2.12.0",
    "cryptography>=46.0.5",
    "httpx>=0.27.0",
    "yfinance>=0.2.40",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
